@@ -25,6 +25,7 @@ Bugfixes:
 - prefs, password generator and search dialogs are no longer modal
 - display non-ascii characters in filenames correctly
 - use fallback folder icons when not found in theme
+- hide any open dialogs when locking the file
 - update icons on theme change
 - left-align labels in link-buttons (for URLs etc)
 
